# Yomita

./: CMakeLists.txt
yomita/yomita/src/: bitop.h  board.cpp  board.h  bonapiece.cpp  common.cpp  common.h  config.h  eval_kppt.cpp  eval_ppt.cpp  evaluate.h  genmove.cpp  hand.cpp  hand.h  learn.cpp  learn_ppt.cpp  multi_think.cpp  multi_think.h  platform.h  search.cpp  shared_memory.cpp  square.cpp  usi.cpp  usioption.cpp
